feat(verify): add styled data verification page and link from home

--- a/index.html
+++ b/index.html
@@ -627,11 +627,11 @@ main>section:nth-child(5){animation-delay:.33s}
   <a href="personal/" target="_blank">個人財務</a>
   <a href="openclaw/" target="_blank">OpenClaw</a>
   <span class="group">核對資料</span>
-  <a href="data/caitodo/tasks.json" target="_blank">才多多 JSON</a>
-  <a href="data/zhaojing/tasks.json" target="_blank">兆鯨 JSON</a>
-  <a href="data/finance/tasks.json" target="_blank">理財 JSON</a>
-  <a href="data/personal/tasks.json" target="_blank">個人 JSON</a>
-  <a href="data/openclaw/tasks.json" target="_blank">OpenClaw JSON</a>
+  <a href="verify/" target="_blank">統一核對頁</a>
+  <a href="data/zhaojing/tasks.json" target="_blank">原始 JSON: 兆鯨</a>
+  <a href="data/finance/tasks.json" target="_blank">原始 JSON: 理財</a>
+  <a href="data/personal/tasks.json" target="_blank">原始 JSON: 個人</a>
+  <a href="data/openclaw/tasks.json" target="_blank">原始 JSON: OpenClaw</a>
 </div>
 
 <footer id="footer-meta">Open Claw &nbsp;·&nbsp; 每日自動更新 &nbsp;·&nbsp; 資料來源 tasks.json</footer>
