--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@ main{max-width:900px;margin:0 auto;padding:24px 24px;display:flex;flex-direction
 }
 .trace-badge.warn{border-color:var(--urgent-bd);color:var(--urgent-text);background:transparent}
 .trace-badge.ok{border-color:#2A5030;color:var(--green);background:transparent}
+.trace-card a{color:inherit;text-decoration:underline;text-decoration-color:#3b4b60}
+.trace-card a:hover{text-decoration-color:#7da7ff}
 
 /* ── BRIEF ── */
 .brief-wrap{
@@ -682,6 +684,7 @@ const INDEX_SOURCES={
   project:"memory/topics/system/index/project_index.md",
   knowledge:"memory/topics/system/index/knowledge_index.md",
 };
+const VERIFY_LINKS={caitodo:'verify/?src=caitodo',zhaojing:'verify/?src=zhaojing',finance:'verify/?src=finance',personal:'verify/?src=personal',openclaw:'verify/?src=openclaw'};
 
 function safeStr(v,fallback="-"){
   if(v===undefined||v===null) return fallback;
@@ -907,10 +910,10 @@ function renderTraceability(){
     const fallbackCnt=d.meta?.fallbackCount??0;
     return `<div class="trace-card">
       <div class="trace-top">
-        <div class="trace-name">${area.name}</div>
+        <div class="trace-name"><a href="${VERIFY_LINKS[area.key]||'#'}" target="_blank" style="color:inherit;text-decoration:none">${area.name}</a></div>
         <div class="trace-upd">更新 ${upd}</div>
       </div>
-      <div class="trace-path">${area.data}</div>
+      <div class="trace-path"><a href="${VERIFY_LINKS[area.key]||'#'}" target="_blank" style="color:inherit">${area.data}</a></div>
       <div class="trace-metrics">
         <span class="trace-badge ${tagRate>=80?"ok":"warn"}">source 標記 ${tagRate}%</span>
         <span class="trace-badge ${fallbackCnt===0?"ok":"warn"}">fallback ${fallbackCnt}</span>
@@ -921,14 +924,14 @@ function renderTraceability(){
   const archCards=[["客戶索引",ARCH.customer],["專案索引",ARCH.project],["知識索引",ARCH.knowledge]].map(([name,m])=>`
     <div class="trace-card">
       <div class="trace-top"><div class="trace-name">${name}</div><div class="trace-upd">更新 ${m?.updated_at||"-"}</div></div>
-      <div class="trace-path">${m?.path||"-"}</div>
+      <div class="trace-path">${m?.path?`<a href="${m.path}" target="_blank" style="color:inherit">${m.path}</a>`:"-"}</div>
       <div class="trace-metrics"><span class="trace-badge ${m?.rows?"ok":"warn"}">索引列數 ${m?.rows??0}</span></div>
     </div>`).join("");
   const zjSummary=getZhaojingFlowSummary(DATA.zhaojing?.tasks||[]);
   const finSummary=getFinanceRefreshSummary(DATA.finance?.tasks||[]);
   const flowCard=`<div class="trace-card">
     <div class="trace-top"><div class="trace-name">流程 KPI 摘要</div><div class="trace-upd">跨域一致性</div></div>
-    <div class="trace-path">兆鯨流程 / 理財刷新排程</div>
+    <div class="trace-path"><a href="verify/?src=zhaojing" target="_blank" style="color:inherit">兆鯨流程</a> / <a href="verify/?src=finance" target="_blank" style="color:inherit">理財刷新排程</a></div>
     <div class="trace-metrics">
       <span class="trace-badge">${zjSummary}</span>
       <span class="trace-badge">${finSummary}</span>
