fix: use webchat-ui client mode to avoid device identity requirement

--- a/openclaw/chat.html
+++ b/openclaw/chat.html
@@ -315,7 +315,7 @@ function sendConnect(){
     minProtocol: 3,
     maxProtocol: 3,
     client: {
-      id: 'openclaw-control-ui',
+      id: 'webchat-ui',
       version: 'dev',
       platform: navigator.platform || 'web',
       mode: 'webchat',
